--- a/index.html
+++ b/index.html
@@ -1,147 +1,136 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Thank You</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Thank You</title>
+
   <style>
-    /* Global Styling */
-body {
-  font-family: "Poppins", sans-serif;
-  background: #f3c6c6;  /* Millennial Pink */
-  margin: 0;
-  padding: 20px;
-}
+    body {
+      margin: 0;
+      padding: 16px;
+      font-family: "Poppins", Arial, sans-serif;
+      background-color: #f3cfc6; /* Millennial Pink */
+      color: #333;
+    }
 
-/* Main container */
-.container {
-  max-width: 850px;
-  margin: 0 auto;
-}
+    /* Main wrapper */
+    .container {
+      max-width: 600px;
+      margin: auto;
+    }
 
-/* Common card styling */
-.card {
-  background: #ffffff;
-  padding: 30px;
-  border-radius: 16px;
-  box-shadow: 0 4px 18px rgba(0,0,0,0.08);
-  border: 1px solid #f0e1e1;
-  margin-bottom: 25px;
-}
+    /* Card style */
+    .card {
+      background: #ffffff;
+      padding: 22px;
+      border-radius: 16px;
+      margin-bottom: 20px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
+    }
 
-/* Heading */
-h1 {
-  text-align: center;
-  color: #333;
-  font-weight: 600;
-}
+    h1 {
+      font-size: 26px;
+      text-align: center;
+      margin-bottom: 12px;
+    }
 
-/* Section title */
-.section-title {
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 10px;
-  color: #444;
-}
+    p {
+      font-size: 18px;
+      line-height: 1.7;
+    }
 
-/* List styling */
-ul {
-  list-style: none;
-  padding: 0;
-  margin-top: 10px;
-}
+    h2 {
+      font-size: 22px;
+      margin-bottom: 10px;
+    }
 
-ul li {
-  margin: 8px 0;
-  font-size: 16px;
-  display: flex;
-  align-items: center;
-}
+    ul {
+      padding-left: 0;
+      list-style: none;
+    }
 
-.dos li::before {
-  content: "✔️";
-  margin-right: 10px;
-}
+    li {
+      font-size: 18px;
+      line-height: 1.6;
+      margin-bottom: 10px;
+    }
 
-.donts li::before {
-  content: "❌";
-  margin-right: 10px;
-}
+    .dos li::before {
+      content: "✔️ ";
+    }
 
-/* 2-column layout for Do/Don’t */
-.flex {
-  display: flex;
-  gap: 20px;
-}
+    .donts li::before {
+      content: "❌ ";
+    }
 
-.col {
-  flex: 1;
-}
+    /* Button */
+    a {
+      display: block;
+      text-align: center;
+      margin: 20px auto;
+      padding: 14px;
+      background: #333;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 10px;
+      font-size: 18px;
+      font-weight: 500;
+    }
 
-/* Button */
-a {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 12px 22px;
-  background: #444;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 8px;
-  transition: 0.3s;
-  font-weight: 500;
-}
+    a:hover {
+      background: #000;
+    }
 
-a:hover {
-  background: #000;
-}
-
+    /* Tablet & Desktop */
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 32px;
+      }
+      p,
+      li {
+        font-size: 19px;
+      }
+    }
   </style>
-  <body>
+</head>
 
-    <div class="container">
+<body>
+  <div class="container">
 
-      <!-- Thank You Message Box -->
-      <div class="card">
-        <h1>Dear Customer</h1>
-        <p>
-          Thank you for choosing Ahyaashree Silver Jewellery.  
-          We are grateful for your trust and hope your new piece adds 
-          beauty and elegance to your everyday style.
-        </p>
-      </div>
-
-      <!-- Do's and Don'ts Section -->
-      <div class="card">
-        <div class="flex">
-          
-          <!-- Do's -->
-          <div class="col">
-            <div class="section-title">✔️ Do’s</div>
-            <ul class="dos">
-              <li>Store in an airtight pouch/box after use.</li>
-              <li>Wipe gently with a soft dry cloth.</li>
-              <li>Keep away from moisture and store in a cool place.</li>
-              <li>Clean occasionally with mild soap & warm water.</li>
-            </ul>
-          </div>
-
-          <!-- Don'ts -->
-          <div class="col">
-            <div class="section-title">❌ Don’ts</div>
-            <ul class="donts">
-              <li>Avoid perfume, deodorant, and chemicals directly on jewellery.</li>
-              <li>Do not wear while bathing, swimming, or exercising.</li>
-              <li>Do not clean with toothpaste or abrasive materials.</li>
-              <li>Do not store different pieces together to prevent scratches.</li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-
-      <a href="https://adhyaashree.com/">Visit Website</a>
-
+    <!-- Thank You Section -->
+    <div class="card">
+      <h1>Dear Customer</h1>
+      <p>
+        Thank you for choosing <b>Ahyaashree Silver Jewellery</b>.  
+        We are grateful for your trust and hope your new piece adds beauty and elegance to your everyday style.
+      </p>
     </div>
 
-  </body>
+    <!-- Do's Section -->
+    <div class="card">
+      <h2>✔️ Do’s</h2>
+      <ul class="dos">
+        <li>Store in an airtight pouch or box after use.</li>
+        <li>Wipe gently with a soft dry cloth.</li>
+        <li>Keep away from moisture and store in a cool place.</li>
+        <li>Clean occasionally with mild soap and warm water.</li>
+      </ul>
+    </div>
+
+    <!-- Don'ts Section -->
+    <div class="card">
+      <h2>❌ Don’ts</h2>
+      <ul class="donts">
+        <li>Avoid perfume, deodorant, and chemicals directly on jewellery.</li>
+        <li>Do not wear while bathing, swimming, or exercising.</li>
+        <li>Do not clean with toothpaste or abrasive materials.</li>
+        <li>Do not store different pieces together to prevent scratches.</li>
+      </ul>
+    </div>
+
+    <a href="https://adhyaashree.com/">Visit Our Website</a>
+
+  </div>
+</body>
 </html>
